if (${ESP_PLATFORM})
    set(COMPONENT_SRCS hello_world.cpp hello_world.h)
    set(COMPONENT_REQUIRES smooth)
    set(COMPONENT_ADD_INCLUDEDIRS ${COMPONENT_PATH})
    register_component()
else ()
    project(hello_world)
    add_library(${PROJECT_NAME} hello_world.cpp hello_world.h)
    target_link_libraries(${PROJECT_NAME} smooth)
    target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR})
endif ()
